# visie-test

./: Readme.md  Teste Visie Full Python e React.md  config.py  main.py  pyproject.toml  requirements.txt  routers.py
controllers/: person.py
manager-people-front/: package.json
models/: person.py
